--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -27,7 +27,7 @@ Support : codings.dev
 :root {
 
 	/* Primary */
-	--primary-color: #07beb8;
+	--primary-color: #3f4293;
 	--primary-15-color: #07beb826;
 	--primary-25-color: #07beb840;
 	--primary-50-color: #07beb880;
