--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5055,11 +5055,12 @@ table {
 @media (max-width: 575px) {
 	.mobile-about--item{
 		width: 50%;
+		padding-left: 2.5rem;
 	}
 	
 	.introSenbay img{
 		object-fit: contain;
-		height: 80vh;
+		height: 70vh;
 	}
 
 	.gallery-width{
