--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -27,8 +27,8 @@ Support : codings.dev
 :root {
 
 	/* Gradient */
-	--primary-colorgra1: #6917d0;
-	--primary-colorgra2: #3f4293;
+	--primary-colorgra1: #3f4293;
+	--primary-colorgra2: #3d3d3b;
 
 	/* Primary */
 	--primary-color: #3f4293;
